--- a/style.css
+++ b/style.css
@@ -2213,10 +2213,12 @@ color: #fff;
 }
 
 .bck-box.bck-box-5>.bck-content {
-    color: #1F1A15;
+    color: #f68a4d;
     border-radius: 10px;
     padding: 6px 25px 6px 23px;
     border-radius: 0;
+    font-family: 'Atma';
+    text-align: center;
 }
 
 .bck-box.bck-box-6 {
