--- a/style.css
+++ b/style.css
@@ -676,10 +676,12 @@ body:not(.edit) #actividad a:not(.cke_button):not(.zoom_flag_img) {
 }
 
 .bck-title-6 {
-
+    color: #ef3d61;
+    font-size: 28px;
+    width: fit-content;
+    font-weight: 500;
+    font-family: 'Atma';
 }
-
-
 
 
 .bck-title-7 {
