--- a/style.css
+++ b/style.css
@@ -517,7 +517,7 @@ body #actividad .workspace.chooseblanks .inline-answer a {
     -webkit-border-radius: 4px;
     -moz-border-radius: 4px;
     border-radius: 10px;
-    border: 2px solid #64bcd5;
+    border: 2px solid #A39888;
     margin: 2px 0;
     padding: 5px;
     width: 100%;
@@ -545,7 +545,7 @@ body #actividad .workspace.chooseblanks .inline-answer a {
 }
 
 #actividad .workspace.clasificar .clasificar_lista .classify-item {
-    border-color: rgb(0 124 57 / 42%);
+    border-color: #A39888;
     padding: 6px
 }
 
@@ -556,7 +556,7 @@ body #actividad .workspace.chooseblanks .inline-answer a {
 }
 
 #actividad .workspace.clasificar .clasificar_conjuntos .conjunto .group-box {
-    border: 3px solid rgb(0 124 57 / 42%);
+    border: 3px solid rgb(163 152 136);
     padding-top: 15px
 }
 
@@ -1649,7 +1649,8 @@ table.bck-table-1 td {
 }
 
 #actividad .workspace.multiple-choice .opcion {
-    background-color: #fff
+    background-color: #fff;
+    border: 3px solid #A39888;
 }
 
 #actividad .workspace.multiple-choice .opcion.respuesta_checked {
