--- a/style.css
+++ b/style.css
@@ -1831,6 +1831,11 @@ table.bck-table-1 td {
     max-height: 800%;
 }
 
+.bck-dropdown-1 .fa-chevron-up:before, 
+.bck-dropdown-1 .fa-chevron-down:before {
+    font-size: 1.2rem;
+}
+
 /*desplegable 12 */
 .bck-dropdown.bck-dropdown-12 {
     background-color: #ffffff;
@@ -1864,312 +1869,12 @@ table.bck-table-1 td {
     max-height: 800%;
 }
 
-/*desplegable 3*/
-.bck-dropdown.bck-dropdown-3 {
-    background-color: #ffffff;
-    border: 3px solid #78AA42;
-    margin-top: 10px;
-    border-radius: 30px 10px 37px 10px;
-    -webkit-border-radius: 30px 10px 37px 10px;
-    -moz-border-radius: 30px 10px 37px 10px;
-
-}
-
-.bck-dropdown-3 .bck-dropdown-titulo {
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding-left: 10px;
-    color: #78AA42;
-    font-family: 'StradaOT-Semibd';
-}
-
-.bck-dropdown-3 .bck-dropdown-icon {
-    background-color: #fff;
-    width: 25px;
-    height: 10px;
-    color: #78AA42;
-}
-
-.bck-dropdown-3 .bck-dropdown-content {
-    background-color: #fff;
-    border: none;
-    padding-left: 17px;
-    border-radius: 30px 10px 37px 10px;
-    max-height: 800%;
-}
-
-/*desplegable 4 */
-.bck-dropdown.bck-dropdown-4 {
-    background-color: #ffffff;
-    border: 3px solid #E79F25;
-    margin-top: 10px;
-    border-radius: 30px 10px 37px 10px;
-    -webkit-border-radius: 30px 10px 37px 10px;
-    -moz-border-radius: 30px 10px 37px 10px;
-
-}
-
-.bck-dropdown-4 .bck-dropdown-titulo {
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding-left: 10px;
-    color: #E79F25;
-    font-family: 'StradaOT-Semibd';
-}
-
-.bck-dropdown-4 .bck-dropdown-icon {
-    background-color: #fff;
-    width: 25px;
-    height: 10px;
-    color: #E79F25;
-}
-
-.bck-dropdown-4 .bck-dropdown-content {
-    background-color: #fff;
-    border: none;
-    padding-left: 17px;
-    border-radius: 30px 10px 37px 10px;
-    max-height: 800%;
-}
-
-/*desplegable 5 */
-.bck-dropdown.bck-dropdown-5 {
-    background-color: #ffffff;
-    border: 3px solid #006294;
-    margin-top: 10px;
-    border-radius: 30px 10px 37px 10px;
-    -webkit-border-radius: 30px 10px 37px 10px;
-    -moz-border-radius: 30px 10px 37px 10px;
-
-}
-
-.bck-dropdown-5 .bck-dropdown-titulo {
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding-left: 10px;
-    color: #006294;
-    font-family: 'StradaOT-Semibd';
-}
-
-.bck-dropdown-5 .bck-dropdown-icon {
-    background-color: #fff;
-    width: 25px;
-    height: 10px;
-    color: #006294;
-}
-
-.bck-dropdown-5 .bck-dropdown-content {
-    background-color: #fff;
-    border: none;
-    padding-left: 17px;
-    border-radius: 30px 10px 37px 10px;
-    max-height: 800%;
-}
-
-/*desplegable 6 */
-.bck-dropdown.bck-dropdown-6 {
-    background-color: #ffffff;
-    border: 3px solid #B51F7E;
-    margin-top: 10px;
-    border-radius: 30px 10px 37px 10px;
-    -webkit-border-radius: 30px 10px 37px 10px;
-    -moz-border-radius: 30px 10px 37px 10px;
-
-}
-
-.bck-dropdown-6 .bck-dropdown-titulo {
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding-left: 10px;
-    color: #B51F7E;
-    font-family: 'StradaOT-Semibd';
-}
-
-.bck-dropdown-6 .bck-dropdown-icon {
-    background-color: #fff;
-    width: 25px;
-    height: 10px;
-    color: #B51F7E;
-}
-
-.bck-dropdown-6 .bck-dropdown-content {
-    background-color: #fff;
-    border: none;
-    padding-left: 17px;
-    border-radius: 30px 10px 37px 10px;
-    max-height: 800%;
-}
-
-/*desplegable 7 */
-.bck-dropdown.bck-dropdown-7 {
-    background-color: #ffffff;
-    border: 3px solid #006F41;
-    margin-top: 10px;
-    border-radius: 30px 10px 37px 10px;
-    -webkit-border-radius: 30px 10px 37px 10px;
-    -moz-border-radius: 30px 10px 37px 10px;
-
-}
-
-.bck-dropdown-7 .bck-dropdown-titulo {
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding-left: 10px;
-    color: #006F41;
-    font-family: 'StradaOT-Semibd';
-}
-
-.bck-dropdown-7 .bck-dropdown-icon {
-    background-color: #fff;
-    width: 25px;
-    height: 10px;
-    color: #006F41;
-}
-
-.bck-dropdown-7 .bck-dropdown-content {
-    background-color: #fff;
-    border: none;
-    padding-left: 17px;
-    border-radius: 30px 10px 37px 10px;
-    max-height: 800%;
+.bck-dropdown-12 .fa-chevron-up:before, 
+.bck-dropdown-12 .fa-chevron-down:before {
+    font-size: 1.2rem;
 }
 
 
-/*desplegable 8 */
-.bck-dropdown.bck-dropdown-8 {
-    background-color: #ffffff;
-    border: 3px solid #E0C002;
-    margin-top: 10px;
-    border-radius: 30px 10px 37px 10px;
-    -webkit-border-radius: 30px 10px 37px 10px;
-    -moz-border-radius: 30px 10px 37px 10px;
-
-}
-
-.bck-dropdown-8  .bck-dropdown-titulo {
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding-left: 10px;
-    color: #E0C002;
-    font-family: 'StradaOT-Semibd';
-}
-
-.bck-dropdown-8 .bck-dropdown-icon {
-    background-color: #fff;
-    width: 25px;
-    height: 10px;
-    color: #E0C002;
-}
-
-.bck-dropdown-8 .bck-dropdown-content {
-    background-color: #fff;
-    border: none;
-    padding-left: 17px;
-    border-radius: 30px 10px 37px 10px;
-    max-height: 800%;
-}
-
-/*desplegable 9 */
-.bck-dropdown.bck-dropdown-9 {
-    background-color: #ffffff;
-    border: 3px solid #A10436;
-    margin-top: 10px;
-    border-radius: 30px 10px 37px 10px;
-    -webkit-border-radius: 30px 10px 37px 10px;
-    -moz-border-radius: 30px 10px 37px 10px;
-
-}
-
-.bck-dropdown-9 .bck-dropdown-titulo {
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding-left: 10px;
-    color: #A10436;
-    font-family: 'StradaOT-Semibd';
-}
-
-.bck-dropdown-9 .bck-dropdown-icon {
-    background-color: #fff;
-    width: 25px;
-    height: 10px;
-    color: #A10436;
-}
-
-.bck-dropdown-9 .bck-dropdown-content {
-    background-color: #fff;
-    border: none;
-    padding-left: 17px;
-    border-radius: 30px 10px 37px 10px;
-    max-height: 800%;
-}
-
-/*desplegable 10 */
-.bck-dropdown.bck-dropdown-10 {
-    background-color: #ffffff;
-    border: 3px solid #738A96;
-    margin-top: 10px;
-    border-radius: 30px 10px 37px 10px;
-    -webkit-border-radius: 30px 10px 37px 10px;
-    -moz-border-radius: 30px 10px 37px 10px;
-
-}
-
-.bck-dropdown-10 .bck-dropdown-titulo {
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding-left: 10px;
-    color: #738A96;
-    font-family: 'StradaOT-Semibd';
-}
-
-.bck-dropdown-10 .bck-dropdown-icon {
-    background-color: #fff;
-    width: 25px;
-    height: 10px;
-    color: #738A96;
-}
-
-.bck-dropdown-10 .bck-dropdown-content {
-    background-color: #fff;
-    border: none;
-    padding-left: 17px;
-    border-radius: 30px 10px 37px 10px;
-    max-height: 800%;
-}
-
-/*desplegable 11 */
-.bck-dropdown.bck-dropdown-12 {
-    background-color: #ffffff;
-    border: 3px solid #00B6ED;
-    margin-top: 10px;
-    border-radius: 30px 10px 37px 10px;
-    -webkit-border-radius: 30px 10px 37px 10px;
-    -moz-border-radius: 30px 10px 37px 10px;
-
-}
-
-.bck-dropdown-11 .bck-dropdown-titulo {
-    font-size: 2.5rem;
-    font-weight: 600;
-    padding-left: 10px;
-    color: #00B6ED;
-    font-family: 'StradaOT-Semibd';
-}
-
-.bck-dropdown-11 .bck-dropdown-icon {
-    background-color: #fff;
-    width: 25px;
-    height: 10px;
-    color: #00B6ED;
-}
-
-.bck-dropdown-11 .bck-dropdown-content {
-    background-color: #fff;
-    border: none;
-    padding-left: 17px;
-    border-radius: 30px 10px 37px 10px;
-    max-height: 800%;
-}
 
 .bck-box .chooseblanks p,.bck-box .fillblanks p,.bck-dropdown-2.activities-dropdown .bck-box p {
     display: block
