--- a/style.css
+++ b/style.css
@@ -1989,13 +1989,109 @@ table.bck-table-1 td {
 /*audios*/
 .unittag_azul #actividad .player.audio {
     background-image: url(images/audio_transit_azul.png);
-    -webkit-background-size: 100% 100%;
-    -moz-background-size: 100%;
-    -o-background-size: 100%;
-    background-size: contain;
-    background-position: 0;
-    background-color: rgba(154,153,158,0)
 }
+
+.unittag_azul .bck-title-5 {
+    color: #0695C7;
+}
+
+.unittag_azul .bck-title-6 {
+    color: #0695C7;
+}
+
+.unittag_azul .bck-enfasis-3 {
+    color: #EF3D61;
+    font-weight: inherit;
+}
+
+.unittag_azul .item-container .icon-hablar1:before {
+    background-image: url(images/icono_bocadillo_1_azul.png);
+}
+
+.unittag_azul .item-container .icon-hablar2:before {
+    background-image: url(images/icono_bocadillo_2_azul.png);
+}
+
+.unittag_azul .item-container .icon-hablar3:before {
+        background-image: url(images/icono_bocadillo_3_azul.png);
+}
+
+.unittag_azul .item-container .icon-lupa:before {
+    background-image: url(images/icono_lupa_azul.png);
+}
+
+.unittag_azul .item-container .icon-lapiz:before {
+    background-image: url(images/icono_lapiz_azul.png);
+}
+
+.unittag_azul .item-container .icon-dados:before {
+    background-image: url(images/icono_dados_azul.png);
+}
+
+.unittag_azul .item-container .icon-leer:before {
+    background-image: url(images/icono_leer_azul.png);
+}
+
+
+.unittag_azul #actividad .content .cke_contents .bck-ol-1 li:before, 
+.unittag_azul #actividad .content .texto_curso .bck-ol-1 li:before, 
+.unittag_azul #actividad .content .workspace ul li .bck-ol-1 li:before, 
+.unittag_azul #actividad .popover-content .bck-ol-1 li:before {
+    background: #0695C7;
+}
+
+.unittag_azul #actividad .content .cke_contents ol.bck-ol-2 li:before, 
+.unittag_azul #actividad .content .texto_curso ol.bck-ol-2 li:before, 
+.unittag_azul #actividad .content .workspace ul li ol.bck-ol-2 li:before, 
+.unittag_azul #actividad .popover-content ol.bck-ol-2 li:before {
+    color: #0695C7;
+}
+
+.unittag_azul #actividad .content .cke_contents ol.bck-ol-3 li:before, 
+.unittag_azul #actividad .content .texto_curso ol.bck-ol-3 li:before, 
+.unittag_azul #actividad .content .workspace ul li ol.bck-ol-3 li:before, 
+.unittag_azul #actividad .popover-content ol.bck-ol-3 li:before {
+    color: #0695C7;
+}
+
+.unittag_azul #actividad .content .cke_contents ol.bck-ol-4 li:before, 
+.unittag_azul #actividad .content .texto_curso ol.bck-ol-4 li:before, 
+.unittag_azul #actividad .content .workspace ul li ol.bck-ol-4 li:before, 
+.unittag_azul #actividad .popover-content ol.bck-ol-4 li:before {
+    color: #0695C7;
+}
+
+.unittag_azul #actividad .content .cke_contents ol.bck-ol-5 li:before, 
+.unittag_azul #actividad .content .texto_curso ol.bck-ol-5 li:before, 
+.unittag_azul #actividad .content .workspace ul li ol.bck-ol-5 li:before, 
+.unittag_azul #actividad .popover-content ol.bck-ol-5 li:before {
+    color: #0695C7;
+}
+
+.unittag_azul #actividad .content .cke_contents .bck-ul-1 li:before,
+.unittag_azul #actividad .content .texto_curso ul.bck-ul-1 li:before,
+.unittag_azul #actividad .popover-content ul.bck-ul-1 li:before,
+.unittag_azul #actividad .content .workspace ul li ul.bck-ul-1 li:before {
+    color: #0695C7;
+}
+
+
+/*caja 07*/
+.unittag_azul .bck-box.bck-box-7 {
+    border: 1px solid #0695C7;
+}
+
+
+.unittag_azul .bck-box.bck-box-7:before {
+    background: url(images/icono_caja_07_azul.png);
+}
+
+
+.unittag_azul .bck-box.bck-box-7>.bck-title {
+    color: #0695C7;
+}
+
+
 
 
 /*querys*/
