--- a/style.css
+++ b/style.css
@@ -1419,7 +1419,7 @@ color: #fff;
 
 /*caja 07*/
 .bck-box.bck-box-7 {
-    padding: 16px 30px 16px 30px;
+    padding: 16px 11px 16px 9px;
     border: 1px solid #EF3D61;
     background-color: #fff;
     border-radius: 0 30px 30px 30px;
@@ -1428,13 +1428,13 @@ color: #fff;
 
 .bck-box.bck-box-7:before {
     background: url(images/icono_caja_07.png);
-    content: "";
+            content: "";
     background-size: contain;
     background-repeat: no-repeat;
     position: absolute;
-    left: -72px;
+    left: -42px;
     z-index: 100;
-    top: -29%;
+    top: -19%;
     width: 85px;
     padding: 45px;
 }
@@ -1451,7 +1451,7 @@ color: #fff;
 
 .bck-box.bck-box-7>.bck-content {
     border-radius: 10px;
-    padding: 6px 25px 6px 23px;
+    padding: 6px 9px 6px 6px;
     border-radius: 0;
 }
 
@@ -1999,6 +1999,10 @@ table.bck-table-1 td {
     color: #0695C7;
 }
 
+.unittag_azul .bck-enfasis-2 {
+    color: #EF3D61;
+}
+
 .unittag_azul .bck-enfasis-3 {
     color: #EF3D61;
     font-weight: inherit;
@@ -2038,6 +2042,7 @@ table.bck-table-1 td {
 .unittag_azul #actividad .content .workspace ul li .bck-ol-1 li:before, 
 .unittag_azul #actividad .popover-content .bck-ol-1 li:before {
     background: #0695C7;
+    border: 1px solid #0695C7;
 }
 
 .unittag_azul #actividad .content .cke_contents ol.bck-ol-2 li:before, 
@@ -2084,6 +2089,15 @@ table.bck-table-1 td {
 
 .unittag_azul .bck-box.bck-box-7:before {
     background: url(images/icono_caja_07_azul.png);
+        content: "";
+    background-size: contain;
+    background-repeat: no-repeat;
+    position: absolute;
+    left: -42px;
+    z-index: 100;
+    top: -19%;
+    width: 85px;
+    padding: 45px;
 }
 
 
