--- a/style.css
+++ b/style.css
@@ -2000,12 +2000,11 @@ table.bck-table-1 td {
 }
 
 .unittag_azul .bck-enfasis-2 {
-    color: #EF3D61;
+    color: #0695C7;
 }
 
 .unittag_azul .bck-enfasis-3 {
-    color: #EF3D61;
-    font-weight: inherit;
+    color: #0695C7;
 }
 
 .unittag_azul .item-container .icon-hablar1:before {
